<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pengelmann.learningintents.Start">

    <TextView
        android:id="@+id/start_top"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E3F6CE"
        android:padding="5px"
        android:layout_margin="5px"
        android:text="@string/start_top" />

    <EditText
        android:id="@+id/editableTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_top"
        android:text="@string/default_text_editable"
        android:layout_centerHorizontal="true"
        android:background="#F2F5A9"/>

    <Button
        android:id="@+id/submit"
        android:layout_below="@id/editableTest"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_change"/>

    <TextView
        android:id="@+id/result"
        android:layout_below="@id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5D0A9"
        android:text="@string/default_text_result"/>

    <LinearLayout
        android:id="@+id/radioChecker"
        android:layout_below="@id/result"
        android:layout_marginTop="5px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <RadioGroup
            android:id="@+id/colorChecker"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_red"
                />

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_blue"/>

            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_yellow"/>

            <RadioButton
                android:id="@+id/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_grey"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/textSize"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_font_bold"/>

            <RadioButton
                android:id="@+id/italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_font_italic"/>

            <RadioButton
                android:id="@+id/underligned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_font_underligned"/>

            <RadioButton
                android:id="@+id/big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_font_big"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/change"
        android:layout_below="@id/radioChecker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_change_output"/>
</RelativeLayout>
